// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders correctly - navigation bottom center 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      className="menuIcon"
      viewBox="0 0 13.37 13.37"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="menu horizontalAlignCenter verticalAlignBottom"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        className="menuIcon"
        viewBox="0 0 17.91 15.39"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center center 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      className="menuIcon"
      viewBox="0 0 13.37 13.37"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="menu horizontalAlignCenter verticalAlignCenter"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        className="menuIcon"
        viewBox="0 0 17.91 15.39"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center left 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      className="menuIcon"
      viewBox="0 0 13.37 13.37"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="menu horizontalAlignLeft verticalAlignCenter"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        className="menuIcon"
        viewBox="0 0 17.91 15.39"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center right 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      className="menuIcon"
      viewBox="0 0 13.37 13.37"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="menu horizontalAlignRight verticalAlignCenter"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        className="menuIcon"
        viewBox="0 0 17.91 15.39"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation top center 1`] = `
<div>
  <button
    className="navLink"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      className="menuIcon"
      viewBox="0 0 13.37 13.37"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="menu horizontalAlignCenter verticalAlignTop"
    id="menu"
  >
    <button
      className="navClose"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        className="menuIcon"
        viewBox="0 0 17.91 15.39"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul>
        <li>
          <Link
            activeClassName="active"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
